project 1 finished for design patterns

--- a/ClientServer2/Casestudy/casestudy_client/src/css/quasar.variables.scss
+++ b/ClientServer2/Casestudy/casestudy_client/src/css/quasar.variables.scss
@@ -12,13 +12,15 @@
 // to match your app's branding.
 // Tip: Use the "Theme Builder" on Quasar's documentation website.
 
-$primary: #1976d2;
-$secondary: #26a69a;
-$accent: #9c27b0;
+// src/css/quasar.variables.sass
 
-$dark: #1d1d1d;
+$primary: #7db0e3;
+$secondary: #65ebdd;
+$accent: #d575e6;
 
-$positive: #21ba45;
-$negative: #c10015;
-$info: #31ccec;
-$warning: #f2c037;
+$dark: #303030;
+
+$positive: #1ab03d;
+$negative: #961423;
+$info: #aadce6;
+$warning: #e0b94c;
